# movie-booking-fastapi

./: .gitignore  README.md  database.py  functions.py  models.py  pyproject.toml  requirements.txt  reserve.py  schemas.py  server.py  services.py  test.py  z_test.py  ztest.py  zzmaintask.py  zzzz.py
Database/: movie.json  relation.json  user.json
archive/: contextmanager.py  functions.py  main.py  movie.py  person.py  reserve.py
archive/Database/: movie.json  relation.json  user.json
handlers/: movie_handler.py  movie_handlers.py  reserve_handler.py  user_handler.py
model/: schemas.py
src/: dependencies.py  exceptions.py  log.py  logger.py  main.py  models.py
src/api/: middlewares.py
src/api/cli/: database.py  user.py
src/api/entrypoint/auth/: models.py  responses.py  routes.py
src/api/entrypoint/movie/: models.py  responses.py  routes.py
src/api/entrypoint/reserve/: models.py  responses.py  routes.py
src/api/entrypoint/user/: models.py  responses.py  routes.py
src/auth/: auth.py
src/cmd/api/: main.py
src/cmd/cli/: main.py
src/config/: settings.py
src/core/: config.py  database.py  dependencies.py  exceptions.py  extensions.py  helpers.py  lifespan.py  log_config.py  middlewares.py  provider.py  security.py
src/core/infrastucture/persistence/: database_postgres.py
src/database/: database.py  models.py
src/db_schemas/: movie.py  reserve.py  user.py
src/endpoints/: movies.py  reserves.py  users.py
src/entrypoints/: middlewares.py
src/entrypoints/api/auth/: models.py  responses.py  routes.py
src/entrypoints/api/movie/: models.py  responses.py  routes.py
src/entrypoints/api/user/: routes.py  (+1 more)
src/entrypoints/cli/: database.py  user.py
src/handlers/: __init__.py  movie_handler.py  reserve_handler.py  user_handler.py
src/model/: movie.py  reserve.py  token.py  user.py
src/model/responses/: movie.py  reserve.py  user.py
src/modules/auth/: exceptions.py  handlers.py  queries.py
src/modules/movie/: exceptions.py  handlers.py  queries.py
src/modules/reserve/: exceptions.py  handlers.py  queries.py
src/modules/user/: exceptions.py  handlers.py  queries.py
src/movie_booking_fastapi/: __init__.py  exceptions.py  logger.py  main.py  server.py
src/movie_booking_fastapi/auth/: auth.py
src/movie_booking_fastapi/database/: models.py
src/movie_booking_fastapi/handlers/: movie_handler.py  reserve_handler.py  user_handler.py
src/movie_booking_fastapi/model/: __init__.py  responses.py  schemas.py
(+38 files in other folders)
