[project]
name = "movie-booking-fastapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SujishMaharjan", email = "sujishmaharjan@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.12",
    "bcrypt>=4.3.0",
    "sqlalchemy>=2.0.40",
    "psycopg2>=2.9.10",
    "python-decouple>=3.8",
    "pyjwt>=2.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/movie_booking_fastapi"]
